--- a/viewNeighborhood.html
+++ b/viewNeighborhood.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="myss.css">
     <title>My favourite Neighborhood</title>
-    </head>
+	<div id="map"></div> 
+	</head>
 <body>
 
     <form id="form-container" class="form-container">
